# LineEngine

./: CMakeLists.txt  readme.txt
Libraries/includes/glad/: glad.h
Libraries/includes/learnopengl/: camera.h  shader.h
Libraries/libs/: assimp-vc120-mt.lib
src/: TestGL.opensdf  game.cpp
src/Engine/: engine.cpp  engine.h  glad.c  mesh.h  model.h  object.cpp  object.h  shader.fs
